--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "rouda/laravel-openprovider",
-    "description": "OpenProvider for Laravel 6.x/7.x/8.x",
+    "description": "OpenProvider for Laravel 6.x/7.x/8.x/9.x/10.x",
     "keywords": [
         "openprovider",
         "laravel"
