--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -12,8 +12,8 @@ jobs:
 
         strategy:
             matrix:
-                php: [8.0, 7.4]
-                laravel: [10.*, 9.*, 8.*, 7.*, 6.*]
+                php: [8.0, 8.3]
+                laravel: [10.*, 9.*, 8.*]
                 dependency-version: [prefer-lowest, prefer-stable]
                 os: [ubuntu-latest]
                 include:
@@ -23,10 +23,6 @@ jobs:
                       testbench: 7.*
                     - laravel: 8.*
                       testbench: 6.*
-                    - laravel: 7.*
-                      testbench: 5.*
-                    - laravel: 6.*
-                      testbench: 4.*
 
         name: P${{ matrix.php }} - L${{ matrix.laravel }} - ${{ matrix.dependency-version }}
 
